2002-01-23  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* install-info.el
	(install-info-insert-file-contents):
	(install-info-write-region):
	(install-info-add-groups):
	Use common syntax for functions.

	* skk-comp.el
	(skk-comp-do):
	When no more comletion is left, don't increment `skk-comp-depth'.

	(skk-comp-do-1):
	When FIRST, move point to `skk-okuri-nasi-min' in all buffers for
	completion. Use `skk-loop-for-buffers'.

	(skk-comp-do-1-in-buf):
	Abolish function.

	(skk-comp-search-current-buffer):
	New function.

	* skk-macs.el:
	Require `skk-vars' at load time as well as at compile time.

	* skk-vars.el
	(skk-dic-comp-first):
	Abolish optional argument.

	* skk.el
	(after-init-hook):
	Avoid warning for `init-file-user'.

2002-01-22  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK:
	Always call `set-language-environment'.

	(SKK-MK-generate-autoloads-el):
	No longer check if `autoload' is valid.

	* skk.el
	(skk-mode-invoke):
	Call `skk-adjust-user-option' just after `skk-cus-setup'.

	(skk-adjust-user-option):
	If `skk-jisyo-save-count' is nil, set `skk-share-private-jisyo'
	nil.

2002-01-20  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* patch/e19/custom-1.9962.patch:
	No longer in the repository.

	* SKK-MK
	(SKK-MK-texinfo-coding-system):
	Always 'iso-2022-jp'.

	* doc/skk.texi:
	Update for Daredevil SKK 12.

2002-01-19  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-cursor.el:
	* skk-isearch.el:
	* skk.el:
	Use #' for functions.

	* skk-vars.el
	(skk-background-mode):
	Use a little more simple conditions.

	* skk-macs.el
	(ignore-errors):
	(skk-defadvice):
	(skk-save-point):
	(skk-deflocalvar):
	(skk-with-point-move):
	(skk-face-on):
	(skk-cannot-be-undone):
	(skk-loop-for-buffers):
	Use common backquote style.

	* skk-jisyo-edit-mode.el
	(auto-mode-alist):
	Use `unless'.

2002-01-18  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	No longer support Emacs 20.2 or earlier.

	* skk-version.el
	(skk-version): Bump to 12.1.0.

	* SKK-CFG: