@@ -1,3 +1,12 @@
+2002-01-24  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
+
+	* skk-gadget.el
+	(skk-clock):
+	Use common syntax for functions.
+
+	* skk-macs.el:
+	No longer work around for the invalid `dolist'.
+
 2002-01-23  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
 
 	* install-info.el
@@ -3570,8 +3579,8 @@
 
 
 
-Version: $Id: ChangeLog,v 1.648 2002/01/23 14:27:53 czkmt Exp $
-Last Modified: $Date: 2002/01/23 14:27:53 $
+Version: $Id: ChangeLog,v 1.649 2002/01/24 15:01:48 czkmt Exp $
+Last Modified: $Date: 2002/01/24 15:01:48 $
 
 Local Variables:
 buffer-file-coding-system: iso-2022-jp
